--- a/css/login.css
+++ b/css/login.css
@@ -2,6 +2,7 @@ body {
     background-color:#277EAE;
     text-align: center;
     align-items: center;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
