--- a/css/home.css
+++ b/css/home.css
@@ -1,2 +1,65 @@
 @import url(bootstrap.min.css);
 
+* {
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+
+}
+
+#hello{
+    position: absolute;
+    width: 866px;
+    height: 198px;
+    left: 58px;
+    top: 34px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 75px;
+    color: #085D8C;
+    }
+
+h1{
+    position: absolute;
+    width: 866px;
+    height: 198px;
+    left: 290px;
+    top: 34px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 75px;
+    color: #000000;
+}
+
+.barra-status{
+    position: absolute;
+    width: 1440px;
+    height: 140px;
+    left: 0px;
+    top: 0px;
+    background: rgba(196, 196, 196, 0.1);
+}
+
+.barra-logado{
+    position: absolute;
+    width: 190px;
+    height: 45px;
+    left: 1078px;
+    top: 47px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 45px;
+    color: #085D8C;
+}
+
+.sidebar{
+    position: absolute;
+    width: 412px;
+    height: 891px;
+    left: 0px;
+    top: 140px;
+}
