--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url(bootstrap.min.css);
 
 * {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: ;
 }
 
 body {
@@ -24,79 +24,54 @@ body {
 }
 
 h1 {
-    position: absolute;
-    width: 545px;
-    height: 198px;
-    left: 435px;
-    top: 68px;
-
-    font-style: normal;
-    font-weight: bold;
-    font-size: 110px;
-    line-height: 180px;
+    text-align: center;
+	margin: 50px;
+	font-size: 6.5em;
     color: white;
+    font-weight: 700;
 }
 
 h2 {
-    position: absolute;
-    left: 145px;
-    top: -70px;
-
-    font-style: normal;
-    font-weight: bold;
-    font-size: 35px;
-    line-height: 75px;
-    color: black;
+    text-align: center;
+	font-size: 2em;
+    margin-top: -2px;
+    font-weight: 700;
 }
 
 p {
-    text-indent: -100px;
+    text-indent: -95px;
 }
 
 label {
-    font-weight: 700;
-    text-indent: -101px;
-    font-size: 20px;
-    line-height: 30px;
+    font-weight: 800;
 }
 
 input {
     border-color: black;
     border-radius: 3px;
     border-width: 2px;
-    width: 270px;
+    width: 250px;
     height: 35px;
 }
 
 #btn_Entrar {
-    height: 43px;
-    width: 170px;
+    width: 150px;
     font-weight:bold;
     text-align: center;
-    font-size: 18px;
 }
 
 .content {
     align-items: center;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .quadroLogin {
     background:white;
-    position: absolute;
-    width: 490px;
-    height: 350px;
-    left: 470px;
-    top: 261px;
-    border-radius: 3px;
-}
-
-#login {
-    position: absolute;
-    width: 388px;
-    height: 93px;
-    left: 55px;
-    top: 70px;
+    width: 35%;
+    height: 293px;
+    padding-top: 10px;
+    margin: auto;
+    border-radius: 5px;
 }
 
 form {
