--- a/css/index.css
+++ b/css/index.css
@@ -33,21 +33,26 @@ h1 {
 h2 {
     text-align: center;
 	font-size: 2em;
-    margin-top: -2px;
-    font-weight: 800;
+    margin-top: -6px;
+    font-weight:800;
 }
 
 label {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
+}
+
+p{
+    margin-left: 65px;
 }
 
 input {
     border-color: black;
-    border-radius: 3px;
+    border-radius: 4px;
     border-width: 2px;
-    width: 250px;
-    height: 35px;
+    width: 80%;
+    height: 36px;
+    font-size: 12px;
 }
 
 #btn_Entrar {
@@ -64,15 +69,22 @@ input {
     margin-top: 50px;
 }
 
-.quadroLogin {
+#login {
     background:white;
-    width: 35%;
-    height: 320px;
-    padding-top: 10px;
-    margin: auto;
+    position: absolute;
+    padding: 30px; 
+    width: 500px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
     border-radius: 3px;
 }
 
 form{
     text-align: center;
+}
+
+.btn-group {
+    margin-left: 50%;
+    transform: translate(-50%);
 }
