--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,10 @@
 @import url(bootstrap.min.css);
 
 * {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    border: 0;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -9,50 +12,37 @@ body {
 }
 
 #hello{
-    position: absolute;
-    width: 866px;
-    height: 198px;
-    left: 58px;
-    top: 34px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 50px;
-    line-height: 75px;
     color: #085D8C;
     }
 
 h1{
-    position: absolute;
-    width: 866px;
-    height: 198px;
-    left: 290px;
-    top: 34px;
-    font-style: normal;
-    font-weight: bold;
     font-size: 50px;
     line-height: 75px;
+    font-weight: 700;
     color: #000000;
 }
 
 .barra-status{
-    position: absolute;
-    width: 1440px;
+    display: flex;
+    width:100%;  
+    justify-content: space-between;
+    align-items: center;
     height: 140px;
-    left: 0px;
-    top: 0px;
+    flex-direction: row;
+    padding: 26px 54px;
     background: rgba(196, 196, 196, 0.1);
 }
 
-.barra-logado{
-    position: absolute;
-    width: 190px;
-    height: 45px;
-    left: 1078px;
-    top: 47px;
-    font-style: normal;
+.aux{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.aux2{
     font-weight: bold;
-    font-size: 30px;
-    line-height: 45px;
+}
+.barra-logado{
+    font-style: normal;
     color: #085D8C;
 }
 
