--- a/css/index.css
+++ b/css/index.css
@@ -9,11 +9,15 @@
 
 body {
     background-color:#277EAE;
+    background-image: url(../images/background-\ sys\ unity2.png);
+    background-size: 100%;
 }
-
-.ui{
-    opacity: 0.2;
-    width: 100%;
+.container{
+    align-items: center;
+}
+.content {
+    align-items: center;
+    margin-top: 50px;
 }
 
 h1 {
@@ -24,61 +28,55 @@ h1 {
     font-weight: 700;
 }
 
+.form{
+    align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.login {
+    display: flex;
+    background:white;
+    padding: 30px; 
+    border-radius: 3px;
+    width: 40%;
+    height: 380px;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 h2 {
     text-align: center;
 	font-size: 2em;
-    margin-top: -6px;
     font-weight:800;
 }
 
-label {
-    font-weight: 700;
-    font-size: 18px;
+p{
+    
 }
 
-p{
-    margin-left: 65px;
+label {
+    display: flex;
+    flex: 1;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 input {
     border-color: black;
     border-radius: 4px;
     border-width: 2px;
-    width: 80%;
+    width: 100%;
     height: 36px;
     font-size: 12px;
 }
 
 #btn_Entrar {
+    width: 50%;
     height: 43px;
-    width: 170px;
     font-weight:bold;
     text-align: center;
     font-size: 18px;
-    
-}
-
-.content {
-    align-items: center;
-    margin-top: 50px;
-}
-
-#login {
-    background:white;
-    position: absolute;
-    padding: 30px; 
-    width: 30%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 3px;
-}
-
-form{
-    text-align: center;
-}
-
-.btn-group {
-    margin-left: 50%;
-    transform: translate(-50%);
 }
