--- a/css/index.css
+++ b/css/index.css
@@ -40,16 +40,23 @@ h1 {
     background:white;
     padding: 30px; 
     border-radius: 3px;
-    width: 35%;
-    height: 380px;
+    width: 40%;
+    height: 340px;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
+    text-align: center;
 }
 
 h2 {
     text-align: center;
 	font-size: 2em;
     font-weight:800;
+    margin-top: -10px;
+}
+
+p{
+    width: 60%;
 }
 
 label {
@@ -69,9 +76,10 @@ input {
 }
 
 #btn_Entrar {
-    width: 50%;
+    flex: 0;
+    width: auto;
     height: 43px;
     font-weight:bold;
-    text-align: center;
     font-size: 18px;
+    padding: 0 40px 0 40px;
 }
