--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,4 @@
-@import url(bootstrap.min.css);
-
-* {
-    font-family: 'Poppins', sans-serif;
-    padding: 0;
-    margin: 0;
-}
+@import url(main.css);
 
 body {
     background-color:#277EAE;
