--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,10 @@
 @import url(main.css);
 
+
 #hello{
     color: #085D8C;
-    }
+    margin-right: 15px;
+}
 
 h1{
     margin: 0;
@@ -17,7 +19,6 @@ p{
 }
 a{
     text-decoration: none;
-
 }
 
 .barra-status{
@@ -100,7 +101,7 @@ a{
 
 .sidebar{
     display: flex;
-    position: fixed;
+    position: absolute;
     flex-direction: column;
     height: 100%;
     width: 25%;
@@ -232,20 +233,35 @@ a{
     width: 70%;
     padding: 20px;
 }
-
-.table-bordered{
-    border-color: #085D8C;
-    border-radius: 70%;
+.section-table h1{
+    font-size: 40px;
 }
 
-
 .table img{
-    width: 5%;
-    margin-right: 30px;
+    width: 60%;
+}
+
+.table{
+    border: solid 1px #085D8C;
+    font-size: 17px;
+    font-weight:700;  
+}
+
+.space-TD-table{
+    width: 70px;
 }
 
 .link-see-more{
-display: flex;
-align-items: center;
-justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.link-see-more a{
+    color: #086191;
+    font-size: 20px;
+    font-weight: bold;
+
 }
