--- a/css/home.css
+++ b/css/home.css
@@ -31,7 +31,7 @@ a{
     width:100%;  
     justify-content: space-between;
     align-items: center;
-    height: 140px;
+    height: 100px;
     flex-direction: row;
     padding: 26px 54px;
     background: rgba(196, 196, 196, 0.1);
@@ -90,7 +90,7 @@ a{
 .sidebar{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 25%;
     background: #277EAE;
     list-style: none;
 }
@@ -112,6 +112,8 @@ h3{
 .topics{
     display: flex;
     flex-direction: column;
+    align-items:flex-start;
+    justify-content: flex-start;
     height: 100%;
 }
 
@@ -154,16 +156,18 @@ h3{
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    width: 100%;
+    width: 75%;
     text-decoration: none;
+    height: 100%;
 }
 
 .alerts{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-bottom: 7px;
     width: 100%;
-    
+    height: 20%; 
 }
 .danger{
     display: flex;
@@ -171,12 +175,13 @@ h3{
     align-items: center;
     margin: auto;
 }
-
+.danger p{
+    font-size: 15px; 
+}
 
 .section-table{
     display: flex;
     flex-direction: column;
-    height:max-content;
     align-items:flex-start;
     width: 0%;
     padding: 20px;
@@ -190,7 +195,7 @@ h3{
 }
 
 .danger img{
-    width: 50%;
+    width: 35%;
 }
 
 .section-table{
@@ -199,19 +204,20 @@ h3{
     height:max-content;
     align-items:flex-start;
     width: 100%;
-    padding: 20px;
+    padding: 0px 30px 0px 30px;
 }
-.section-table h1{
-    font-size: 40px;
+.section-table h2{
+    font-size: 30px;
+    font-weight: 700;
 }
 
 .table img{
-    width: 60%;
+    width: 40%;
 }
 
 .table{
     border: solid 1px #085D8C;
-    font-size: 17px;
+    font-size: 15px;
     font-weight:700;  
 }
 
@@ -229,7 +235,7 @@ h3{
 
 .link-see-more a{
     color: #086191;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
 
 }
