--- a/css/home.css
+++ b/css/home.css
@@ -26,7 +26,7 @@ a{
     width: 100%;
 }
 
-.barra-status{
+.bar-status{
     display: flex;
     width:100%;  
     justify-content: space-between;
@@ -43,45 +43,45 @@ a{
     flex-wrap: nowrap;
 }
 
-.barra-logado{
+.bar-login{
     display: flex;
     list-style: none;
     padding: 0;
 }
 
-.barra-logado li a{
+.bar-login li a{
     display: flex;
     align-items: center;
     text-decoration: none;
     justify-content: end;
 }
 
-.barra-logado .btn-secondary {
+.bar-login .btn-secondary {
     color: #085D8C;
     background-color: rgba(196, 196, 196, 0);
     border: 0;
     font-weight: 800;
 }
 
-.barra-logado .btn-secondary:hover {
+.bar-login .btn-secondary:hover {
     background: 0;
     border: 0;
 }
 
-.barra-logado  li a {
+.bar-login  li a {
     font-size: 20px;
     color: #085D8C;
     font-weight: 800;
     padding: 10px;
 }
 
-.barra-logado li .dropdown-menu{
+.bar-login li .dropdown-menu{
     padding: 2px 10px 2px;
     background: #A7C7FF;
     list-style: none;
 }
 
-.sidebar-conteudo{
+.sidebar-tables{
     display: flex;
     align-content: stretch;
     height: 100%;
@@ -90,9 +90,8 @@ a{
 .sidebar{
     display: flex;
     flex-direction: column;
-    width: 25%;
     background: #277EAE;
-    list-style: none;
+    width: 30%;
 }
 
 .menu{
@@ -104,51 +103,65 @@ a{
 }
 
 h3{
-    font-size: 30px;
+    font-size: 32px;
     color: #A7C7FF;
-    font-weight: 600;
+    font-weight: 700;
 }
 
-.topics{
+.sidebar ul{
     display: flex;
     flex-direction: column;
     align-items:flex-start;
     justify-content: flex-start;
-    height: 100%;
 }
 
-.dropdown-sidebar .btn-group{
+.sidebar ul li{
     display: flex;
-    justify-content: start;
+    flex-direction: column;
+    width: 100%;
 }
 
-.dropdown-sidebar li a{
+.sidebar li a{
     display: flex;
     align-items: center;
+}
+
+.btn-toggle {
+    display: flex;
+    align-items: center;
+    padding: 4px 8px;
+    font-weight: 500;
+    font-size: 24px;
+    color: #fff;
+    border: 0;
+}
+
+.btn-toggle:hover {
+    background-color: #085D8C;
+    color: #fff;
+}
+
+.btn-toggle::before {
+    width: 1.25em;
+    line-height: 0;
+    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+    transition: transform .35s ease;
+    transform-origin: .5em 50%;
+}
+
+.btn-toggle[aria-expanded="true"]::before {
+    transform: rotate(270deg);
+}
+
+.btn-toggle-nav a {
+    display: inline-flex;
+    padding: 10px;
+    margin-top: 2px;
     text-decoration: none;
-}
-
-.dropdown-sidebar .btn-secondary {
-    background-color: rgba(196, 196, 196, 0);
-    border: 0;
-    font-weight: 600;
-}
-
-.dropdown-sidebar .btn-secondary::hover {
-    background: 0;
-    border: 0;
-}
-
-.dropdown-sidebar  li a {
-  font-size: 20px;
-  color: #000000;
-  padding: 5px;
-}
-
-.dropdown-sidebar li .dropdown-menu{
-  background: #A7C7FF;
-  list-style: none;
-  width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+    background-color: #A7C7FF;
+    border-radius:0!important;
 }
 
 .content-table{
@@ -156,9 +169,8 @@ h3{
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    width: 75%;
+    width: 100%;
     text-decoration: none;
-    height: 100%;
 }
 
 .alerts{
@@ -237,5 +249,4 @@ h3{
     color: #086191;
     font-size: 15px;
     font-weight: bold;
-
 }
