--- a/css/home.css
+++ b/css/home.css
@@ -170,6 +170,7 @@ h3{
     align-items: flex-end;
     justify-content: flex-end;
     width: 100%;
+    height: 100%;
     text-decoration: none;
 }
 
