ajustado icones da sidebar e dropdown(falta transform-origin individual)

--- a/css/home.css
+++ b/css/home.css
@@ -128,12 +128,17 @@ h3{
 
 .btn-toggle {
     display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
     align-items: center;
     padding: 4px 8px;
-    font-weight: 500;
-    font-size: 24px;
+    font-size: 22px;
     color: #fff;
     border: 0;
+}
+
+.btn-toggle span{
+    padding-left: 10px;
 }
 
 .btn-toggle:hover {
@@ -142,15 +147,16 @@ h3{
 }
 
 .btn-toggle::before {
-    width: 1.25em;
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
     line-height: 0;
-    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+    content: url("../images/baseline_expand_more_white_48dp.png");
     transition: transform .35s ease;
-    transform-origin: .5em 50%;
 }
 
 .btn-toggle[aria-expanded="true"]::before {
-    transform: rotate(270deg);
+    transform: rotate(180deg);
 }
 
 .btn-toggle-nav a {
@@ -162,6 +168,23 @@ h3{
     font-weight: 500;
     background-color: #A7C7FF;
     border-radius:0!important;
+}
+
+.mb{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.mb .btn-toggle{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 10px;
+}
+
+.mb .btn-toggle::before{
+    content: none;
 }
 
 .content-table{
