--- a/css/home.css
+++ b/css/home.css
@@ -57,10 +57,20 @@ a{
 }
 
 .bar-login .btn-secondary {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     color: #085D8C;
     background-color: rgba(196, 196, 196, 0);
     border: 0;
     font-weight: 800;
+}
+
+.bar-login .dropdown-toggle::after {
+    margin: 0;
+    margin-top: 5px;
+    border: 0;
+    content: url("../images/baseline_expand_more_black_48dp.png");
 }
 
 .bar-login .btn-secondary:hover {
@@ -72,13 +82,16 @@ a{
     font-size: 20px;
     color: #085D8C;
     font-weight: 800;
-    padding: 10px;
+    padding: 15px;
 }
 
 .bar-login li .dropdown-menu{
-    padding: 2px 10px 2px;
     background: #A7C7FF;
     list-style: none;
+}
+
+.bar-login .dropdown-menu li:hover{
+    background-color: #ffffff57;
 }
 
 .sidebar-tables{
