--- a/css/home.css
+++ b/css/home.css
@@ -95,11 +95,6 @@ a{
     list-style: none;
 }
 
-.consert{
-    display: flex;
-    flex-direction: row;
-}
-
 .bar-login .dropdown-menu li:hover{
     background-color: #ffffff57;
 }
@@ -118,10 +113,17 @@ a{
 } 
 .sidebar{
     display: flex;
+    position: fixed;
+    left: 0;
+    width: 20%;
+    height: 100%;
     flex-direction: column;
     background: #277EAE;
-    width: 100%;
-    height:108.2%;
+}
+
+.centro{
+    display: flex;
+    justify-content: right;
 }
 
 .menu{
@@ -249,8 +251,8 @@ justify-content: flex-start;
 .content-table{
     margin: 18px;
     display: flex;
+    width: 80%;
     flex-direction: column;
-    width: 100%;
     text-decoration: none;
 }
 
