--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@ html, body {margin:0;padding:0;height:100%;}
 
 h1{
     margin: 0;
-    font-size: 35px;
+    font-size: 30px;
     line-height: 75px;
     font-weight: 700;
     color: #000000;
@@ -32,7 +32,7 @@ a{
     width:100%;  
     justify-content: space-between;
     align-items: center;
-    height: 15%;
+    height: 80px;
     flex-direction: row;
     padding:18px;
     background: rgba(196, 196, 196, 0.1);
@@ -66,11 +66,15 @@ a{
     align-items: center;
     justify-content: space-between;
     color: #085D8C;
+    font-size: 18px;
     background-color: rgba(196, 196, 196, 0);
     border: 0;
     font-weight: 800;
 }
 
+.bar-login .btn-secondary img{
+    margin-right: 12px;
+}
 .bar-login .dropdown-toggle::after {
     margin: 0;
     margin-top: 5px;
@@ -84,7 +88,7 @@ a{
 }
 
 .bar-login  li a {
-    font-size: 8px;
+    font-size: 15px;
     color: #085D8C;
     font-weight: 800;
     padding: 15px;
@@ -93,6 +97,7 @@ a{
 .bar-login li .dropdown-menu{
     background: #A7C7FF;
     list-style: none;
+    width: 100%;
 }
 
 .consert{
@@ -121,7 +126,7 @@ a{
     flex-direction: column;
     background: #277EAE;
     width: 100%;
-    height:108.2%;
+    height:117%;
 }
 
 .menu{
@@ -247,7 +252,6 @@ justify-content: flex-start;
 }
 
 .content-table{
-    margin: 18px;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -273,6 +277,7 @@ justify-content: flex-start;
 }
 
 .section-table{
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
