--- a/css/home.css
+++ b/css/home.css
@@ -119,12 +119,32 @@ a{
 .sidebar{
     display: flex;
     position: fixed;
+    overflow-y: scroll;
+    overflow-x: none;
     left: 0;
     width: 20%;
     height: 100%;
     flex-direction: column;
     background: #277EAE;
 }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #085D8C; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #085D8C; 
+  }
 
 .centro{
     display: flex;
