--- a/css/home.css
+++ b/css/home.css
@@ -360,35 +360,53 @@ justify-content: flex-start;
 }
 @media (min-width: 400px) and (max-width: 600px) {
     .bar-status{
-        height: 150px;
         padding: 10px 26px 10px 26px;
     }
     .welcome{
-        flex-direction: column;
+        align-items: center;
+        flex-direction: row;
         width: 100%;
     }
-    h1{
-        line-height: 50px;
+    #hello{
+        line-height: 30px;
         font-size: 25px;
+    }
+    #welcome{
+        font-size: 0px;
     }
 }
 
 @media (min-width: 601px) and (max-width: 729px) {
     .welcome{
-        flex-direction: column;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
     }
-    h1{
-        line-height: 50px;
+    #hello{
+        line-height: 30px;
         font-size: 25px;
+    }
+    #welcome{
+        font-size: 0px;
     }
 }
 @media (min-width: 730px) and (max-width: 800px) {
+    .welcome{
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+    }
     h1{
         line-height: 40px;
         font-size: 25px;
     }
 }
-@media (min-width: 801px) and (max-width: 850px) {
+@media (min-width: 801px) and (max-width: 850px) {   
+    .welcome{
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+    }
     h1{
         line-height: 40px;
         font-size: 30px;
