--- a/css/user_management.css
+++ b/css/user_management.css
@@ -1,2 +1,35 @@
 @import url(main.css);
 @import url(home.css);
+
+.section-title{
+    height: 50px;
+    padding-left: 70px;
+}
+.section-title  h2{
+    font-size: 30px;
+    font-weight: 700;
+}
+.section-table{
+    padding-left: 70px;    
+}
+.table{
+    width: 90%;
+}
+
+.table img{
+    width: 30px;
+}
+thead{
+    width: 100%;
+    background-color: #085d8c;
+    color: white;
+    font-size: 17px;
+}
+#opcoes{
+    text-align: center;
+    padding-bottom: 12px;
+}
+
+tbody{
+    background-color: #ABD2CE;
+}
