diminuido tamanho da fonte do option do select

--- a/css/user_registration.css
+++ b/css/user_registration.css
@@ -79,6 +79,11 @@ h2{
 .office-access option{
     background: #7AA5BC;
     color: #fff;
+    font-size: 13px;
+}
+
+.office-access select{
+    transition-delay: 250ms;
 }
 
 .register{
