--- a/css/home.css
+++ b/css/home.css
@@ -57,6 +57,7 @@ a{
     display: flex;
     list-style: none;
     padding: 0;
+    margin: 10px 0 0;
 }
 
 .bar-login li a{
@@ -69,9 +70,6 @@ a{
 .bar-login .btn-secondary {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    color: #085D8C;
-    font-size: 18px;
     background-color: rgba(196, 196, 196, 0);
     border: 0;
     font-weight: 800;
@@ -79,10 +77,17 @@ a{
 
 .bar-login .btn-secondary img{
     margin-right: 12px;
+    margin-top: -5px;
 }
+
+.bar-login h6{
+    color: #085D8C;
+    font-size: 18px;
+    font-weight: 700;
+}
+
 .bar-login .dropdown-toggle::after {
     margin: 0;
-    margin-top: 5px;
     border: 0;
     content: url("../images/baseline_expand_more_black_48dp.png");
 }
