--- a/css/user_management.css
+++ b/css/user_management.css
@@ -19,31 +19,22 @@ label{
     margin-bottom: 20px;
 }
 
-
-
 #opcoes{
     text-align: center;
 }
-.read{
-    background-image: url(../images/baseline_visibility_white_48dp.png);
-    width: 1;
+table td{
+    padding-top: 10px;
 }
 
-td a{
+td button{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-.table-teste img :hover{
-    background-color: #ABD2CE;
-    width: 40px;
+.table a :hover{
+    cursor: pointer;
 }
-
-.table-teste{
-    background-color: #ABD2CE;
-}
-table tbody{
+table.dataTable tbody tr{
     background-color: #ABD2CE;
 }
 thead{
@@ -51,5 +42,11 @@ thead{
     background-color: #085d8c;
     color: white;
     font-size: 17px;
+}
+table button{
+    background-color:  #98bebb;
+    border: transparent;
+    width: 90px;
+    padding: 0;
 }
 
