--- a/css/user_management.css
+++ b/css/user_management.css
@@ -54,6 +54,9 @@ table button{
 .visibility::before{
     content: url(../images/visibility_white_24dp.svg);
 }
+.edit::before{
+    content: url(../images/create_white_24dp.svg);
+}
 .modal-header{
     background: #085D8C;
     color: #fff;
