--- a/testeTable.css
+++ b/testeTable.css
@@ -1,3 +1,22 @@
+.section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 700px;
+}
+
+::-webkit-input-placeholder  {
+  color: #bebcbc; 
+  font-style: italic;
+}
+
+input {
+    outline: none;
+}
+  
+
 
 .dataTables_wrapper{
     width: 90%;
