--- a/css/user_management.css
+++ b/css/user_management.css
@@ -43,7 +43,7 @@ table button{
     padding: 0;
 }
 .visibility{
-    margin-left: 100px;
+    margin-left: 150px;
 }
 .edit{
     margin-left: 30px;
@@ -162,4 +162,38 @@ table button{
 }
 .delete::before{
     content: url(../images/delete_white_24dp.svg);
+}
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #085D8C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader > img {
+    width: 50px;
+}
+
+.loader.hidden {
+    animation: fadeOut 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 1;
+        visibility: hidden;
+    }
+}
+
+.thumb {
+    height: 100px;
+    border: 1px solid black;
+    margin: 10px;
 }
