responsividade da tela home ajustada

--- a/css/home.css
+++ b/css/home.css
@@ -448,19 +448,10 @@ justify-content: flex-start;
 }
 
 @media (max-width:930px){
-    .welcome h1{
-        font-size: 28px;
-    }
-}
-
-@media (max-width:890px){
-    .welcome h1{
-        font-size: 26px;
-    }
-}
-
-@media (max-width:853px){
     .welcome{
         flex-wrap: wrap;
+    }
+    .welcome h1{
+        line-height: 35px;
     }
 }
