--- a/testeTable.css
+++ b/testeTable.css
@@ -6,25 +6,30 @@
     width: 100%;
     height: 700px;
 }
-
-::-webkit-input-placeholder  {
-  color: #bebcbc; 
-  font-style: italic;
-}
-
-input {
-    outline: none;
-}
-  
-
-
 .dataTables_wrapper{
     width: 90%;
 }
-
 table button{
     background-color:  #98bebb;
     border: transparent;
     width: 30px;
     padding: 0;
+}
+.modal-lg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 800px;
+    margin: 0;
+}
+.modal-lg img{
+    width: 50%;
+    margin: 0;
+}
+.modal-lg h1{
+    text-align: center;
+    color: rgba(130, 130, 130, 1); 
+    font-weight: bold;
+    font-size: 30px; 
+    height: 30px;
 }
